--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Titan One', cursive;
+    font-size: 48px;
+}
+
 #board {
     display: flex;
     flex-direction: column;
