Add images and game board structure in js and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 body {
     font-family: 'Titan One', cursive;
-    font-size: 48px;
+    font-size: 24px;
 }
 
-#board {
+.board {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    height: 300px;
+    width: 400px;
 }
