Add edits to css board size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,6 @@ body {
 .board {
     display: flex;
     flex-wrap: wrap;
-    height: 300px;
-    width: 400px;
+    height: auto;
+    width: 600px;
 }
